--- a/app/scss/pages/home/home.scss
+++ b/app/scss/pages/home/home.scss
@@ -2,16 +2,6 @@
 @import "../../base/color";
 
 
-.website-backgroundImage{
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    z-index: -1;
-    filter: brightness(.2);
-}
 
 .homeContainer{
     z-index: 2;
