--- a/app/scss/pages/home/nav.scss
+++ b/app/scss/pages/home/nav.scss
@@ -18,7 +18,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #cfcfcfea;
+        background: $ui-element-bg-3;
         transform: translateX(-100%);
         transition: transform .4s cubic-bezier(.47,1.64,0,.8);
         z-index: 4;
@@ -59,7 +59,7 @@
                     //center horizontally the after element 
                     display: flex;
                     justify-content: center;
-                    color: black;
+                    color: $height-contrast-text;
 
                     @include respond(desktop){
                         color: $low-contrast-text;
