--- a/app/scss/pages/work/workSection.scss
+++ b/app/scss/pages/work/workSection.scss
@@ -44,7 +44,7 @@
 
         &__imageContainer{
             width: 100%;
-            height: 200px;
+            height: 27%;
 
             &__image{
                 width: 100%;
@@ -63,7 +63,7 @@
         }
 
         &__content{
-            height: 350px;
+            height: 60%;
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -76,9 +76,9 @@
         }
 
         &__footer{
-            height: 50px;
+            height: auto;
             width: 100%;
-            margin-top: 15px;
+            // margin-top: 40px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
